# alchemy

./: .dockerignore  .gitignore  Dockerfile  README.md  formatted_orders.yml  main.py  pyproject.toml  requirments.txt
app/api/: routes.py  schemas.py  services.py
app/frontend/src/: index.html  script.js  styles.css
contracts/ecommerce/: data_contract.md  data_contract.yaml  dbt_test_cases.yml
infra/: api.tf  data.tf  erc.tf  lambda.tf  lambda_iam.tf  locals.tf  s3.tf  statefile.tf  variables.tf
llm/agents/: base.py  base_agent.py  contract_generator.py  data_engineer.py  data_governance.py  data_quality.py  data_steward.py  dbt_test_case_generator.py  human_review_mixin.py  supervisor.py  system.py  user_request_formating_agent.py
llm/config/: graph_config.yaml  llm.py  llm_config.yaml  loader.py
llm/graph/: graph_builder.py  nodes.py
llm/models/: agent_state.py  data_contract.py  data_engineer.py  data_governance.py  data_quality.py  data_steward.py  dbt_tests.py  supervisor.py  system.py
llm/prompts/: data_contract.j2  data_engineer.j2  data_governance.j2  data_quality.j2  data_steward.j2  dbt_test_case_generator.j2  request_formating.j2  request_processing.j2  supervisor.j2
llm/tools/: __init__.py  decorators.py  read_yaml.py  tool_node.py  tool_registry.py
llm/utils/: contract_downloader.py  data_quality_rules.py  download_dbt_test_case.py  test_cases.yaml  user_input.py
